node-main/deps/v8/test/message/fail/formal-parameters-strict-body.out
*%(basename)s:5: SyntaxError: Unexpected eval or arguments in strict mode
function foo(b, eval) { "use strict"; return b }
                ^^^^
SyntaxError: Unexpected eval or arguments in strict mode
